[package]
name = "roblox"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
cxx = "1.0"
env_logger = "0.10"
log = "0.4"
pelite = "0.10"
retour = "0.1"
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]
