[package]
name = "roblox"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
egui = "0.21"
egui-d3d11 = { git = "https://github.com/sy1ntexx/egui-d3d11" }
env_logger = "0.10"
log = "0.4"
pelite = "0.10"
retour = "0.1"
shroud = { version = "0.1", features = ["directx11"] }
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
